# matching_arts_train

./: .gitignore  Dockerfile  Dockerfile.server  README.md  client_demo.py  db.py  db_to_csv.py  delete_table.py  docker-compose.yml  generate_trumbnails.py  gui.py  main.py  main_api.py  main_web.py  models.py  models_db.py  pyproject.toml  requirements.txt  wall_art_model.pt
.github/workflows/: deploy.yml
client/: index.html  script.js  style.css
client-vite/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
client-vite/src/: App.tsx  index.css
client-vite/src/components/: Controls.tsx  ErrorBoundary.tsx  ImageGallery.tsx
client-vite/src/types/: index.ts
data/: combined_df.csv  combined_df_real.csv  eli_votes.csv  linear_regression_abstract.pkl  linear_regression_model.pkl  linear_regression_paint.pkl
embeddings_cache/: art_embeddings.pkl  wall_embeddings.pkl
logs/: predictions_log.csv
src/: classifiers_api.py  colors_api.py  config.py  embeddings_api.py  features.py  logic.py  walls_logic.py
static/: script.js  style.css
templates/: index.html
train/: EDA.ipynb  embeddings.py  train_classifiers.ipynb  train_walls_art.py
utils/: embed_model.py  get_walls_artwork_pairs.py
